# api/src/main/java/com/gberard/tournament/application/api/PhasesApiDelegateImpl.java
@@ -10,8 +10,8 @@ import com.gberard.tournament.domain.port.input.TeamStatsUseCase;
 import com.gberard.tournament.generated.api.PhasesApiDelegate;
 import com.gberard.tournament.generated.model.ContestantStats;
 import com.gberard.tournament.generated.model.CreatePhaseRequest;
+import com.gberard.tournament.generated.model.Group;
 import com.gberard.tournament.generated.model.Phase;
-import com.gberard.tournament.generated.model.Pool;
 import com.gberard.tournament.generated.model.UpdatePhaseRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -61,32 +61,32 @@ public class PhasesApiDelegateImpl implements PhasesApiDelegate {
     }
 
     @Override
-    public ResponseEntity<List<Pool>> listPhasePools(String phaseId) {
+    public ResponseEntity<List<Group>> listPhaseGroups(String phaseId) {
         findPhaseOrThrow(phaseId);
 
         return ResponseEntity.ok(
-                teamStatsUseCase.getPhasePools(phaseId).stream()
-                        .map(poolId -> new Pool().id(poolId))
+                teamStatsUseCase.getPhaseGroups(phaseId).stream()
+                        .map(groupId -> new Group().id(groupId))
                         .toList()
         );
     }
 
     @Override
-    public ResponseEntity<Pool> getPhaseTeamPool(String phaseId, String teamId) {
+    public ResponseEntity<Group> getPhaseTeamGroup(String phaseId, String teamId) {
         findPhaseOrThrow(phaseId);
         var team = teamService.findById(teamId)
                 .orElseThrow(() -> new EntityNotFoundException("Unknown team " + teamId));
-        var pool = teamStatsUseCase.getTeamPool(team, phaseId)
-                .orElseThrow(() -> new EntityNotFoundException("No pool found for team " + teamId));
+        var group = teamStatsUseCase.getTeamGroup(team, phaseId)
+                .orElseThrow(() -> new EntityNotFoundException("No group found for team " + teamId));
 
-        return ResponseEntity.ok(new Pool().id(pool));
+        return ResponseEntity.ok(new Group().id(group));
     }
 
     @Override
-    public ResponseEntity<List<ContestantStats>> listPhasePoolRankings(String phaseId, String poolId) {
+    public ResponseEntity<List<ContestantStats>> listPhaseGroupRankings(String phaseId, String groupId) {
         findPhaseOrThrow(phaseId);
 
-        return ResponseEntity.ok(teamStatsUseCase.getTeamsStatsByPool(poolId, phaseId).stream()
+        return ResponseEntity.ok(teamStatsUseCase.getTeamsStatsByGroup(groupId, phaseId).stream()
                 .map(StatisticsMapper::toApi)
                 .toList());
     }
