# api/src/main/java/com/gberard/tournament/domain/port/output/GameRepository.java
@@ -13,11 +13,11 @@ public interface GameRepository {
 
     List<Game> findByTeamId(String teamId);
 
-    List<Game> findByPool(String pool);
+    List<Game> findByGroup(String group);
 
     List<Game> findByPhaseId(String phaseId);
 
-    List<Game> findByPoolAndPhaseId(String pool, String phaseId);
+    List<Game> findByGroupAndPhaseId(String group, String phaseId);
 
     List<Game> findByTeamIdAndPhaseId(String teamId, String phaseId);
 
