# api/src/main/java/com/gberard/tournament/infrastructure/repository/jpa/JpaGameRepository.java
@@ -11,11 +11,11 @@ public interface JpaGameRepository extends JpaRepository<GameEntity, String> {
 
     List<GameEntity> findByTeamsId(String teamId);
 
-    List<GameEntity> findByPool(String pool);
+    List<GameEntity> findByGroupId(String groupId);
 
     List<GameEntity> findByPhaseId(String phaseId);
 
-    List<GameEntity> findByPoolAndPhaseId(String pool, String phaseId);
+    List<GameEntity> findByGroupIdAndPhaseId(String groupId, String phaseId);
 
     List<GameEntity> findByTeamsIdAndPhaseId(String teamId, String phaseId);
 }
